# MvAE

MvAE/: GSE132188_pre.ipynb  GSE138536_pre.ipynb  GSE158490_pre.ipynb  GSE67835_pre.ipynb  GSE74672_pre.ipynb  PBMC3k_pre.ipynb  README.md  gse179994_pre.ipynb  pyproject.toml  requirements.txt  run_mvae.py
MvAE/mvae/: __init__.py  cli.py  data.py  metrics.py  model.py  trainer.py  utils.py
