[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mvae"
version = "0.1.0"
description = "Multi-view Autoencoder for scRNA-seq enhancement"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
]

[project.scripts]
mvae = "mvae.cli:main"
